src/objects/hed__Application__c.object
<CustomObject>
    <description>Stores information about a student&apos;s application to an educational institution or program.</description>
    <fields>
        <fullName>hed__Applicant_Decision_Date__c</fullName>
        <description>The date when the student decides whether to enroll.</description>
        <inlineHelpText>The date when the student decides whether to enroll.</inlineHelpText>
        <label>Applicant Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact applying to the institution or program.</description>
        <inlineHelpText>The Contact applying to the institution or program.</inlineHelpText>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications (Applicant)</relationshipLabel>
        <relationshipName>Applications_Applicant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Application_Date__c</fullName>
        <description>The date and time when the application was submitted.</description>
        <inlineHelpText>The date and time when the application was submitted.</inlineHelpText>
        <label>Application Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hed__Application_Decision_Date__c</fullName>
        <description>The date when the institution decides whether to accept the applicant.</description>
        <inlineHelpText>The date when the institution decides whether to accept the applicant.</inlineHelpText>
        <label>Application Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Application_Status__c</fullName>
        <description>The status of the application review process.</description>
        <inlineHelpText>The status of the application review process.</inlineHelpText>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Waitlist</fullName>
                </value>
                <value>
                    <fullName>Admit</fullName>
                </value>
                <value>
                    <fullName>Deny</fullName>
                </value>
                <value>
                    <fullName>Deferred Offer</fullName>
                </value>
                <value>
                    <fullName>Accepted Offer</fullName>
                </value>
                <value>
                    <fullName>Declined Offer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Application_Type__c</fullName>
        <description>The type of program or track the applicant is applying to.</description>
        <inlineHelpText>The type of program or track the applicant is applying to. For example, Undergraduate, Graduate, or Transfer.</inlineHelpText>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Applying_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The academic program or major the applicant is applying to.</description>
        <inlineHelpText>The academic program or major the applicant is applying to.</inlineHelpText>
        <label>Applying To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Preparer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact preparing the application, often a guardian.</description>
        <inlineHelpText>The Contact preparing the application. For example, a guardian or a person assisting someone with special needs.</inlineHelpText>
        <label>Preparer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications (Preparer)</relationshipLabel>
        <relationshipName>Applications_Preparer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The term when the applicant wants to enroll.</description>
        <inlineHelpText>The term when the applicant wants to enroll.</inlineHelpText>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>